# RetroAuto-v2

./: .bug_scan_report.json  .gitignore  .iqds_report.json  .iqds_test.json  .pre-commit-config.yaml  .test_cache.json  CHANGELOG.md  FULL_PROJECT_CONTEXT.txt  README.md  abc.dsl  autofix_prompt.md  check_code.py  merge_project.py  merge_project.py.py  mypy.ini  mypy_errors.txt  package_source.py  project_context.txt  project_whitepaper.md  pyproject.toml  review_prompt.md  run_ide.py  run_qa.py  run_studio.py  script.yaml  script1.yaml  test_results.xml  verify_all.py  walkthrough.md  watch_code.py
.agent/workflows/: auto-save.md  kiem-tra-toan-dien.md
.github/workflows/: ci.yml
app/: __init__.py  cli.py  controller.py  main.py
app/ide/: completion_provider.py  debugger.py  formatter.py  quick_fixes.py  snippets.py
app/resources/: dark_theme.qss
app/tools/: bundler.py  doc_generator.py  recorder.py  scaffold.py
app/ui/: __init__.py  actions_panel.py  actions_panel_template_handler.py  animations.py  assets_panel.py  capture_tool.py  code_editor.py  command_palette.py  coordinates_panel.py  debug_mode.py  debug_panel.py  editor_dialogs.py  engine_worker.py  find_bar.py  flow_converter.py  flow_editor.py  flow_visualizer.py  graph_connection.py  graph_node.py  graph_view.py  hybrid_panel.py  ide_main_window.py  image_preview.py  inspector_panel.py  intellisense.py  interrupts_panel.py  live_preview.py  log_panel.py  main_window.py  minimap.py  mode_tab_bar.py  onboarding_wizard.py  output_panel.py  perf_utils.py  progressive_disclosure.py  project_explorer.py  properties_panel.py  quick_actions.py  roi_editor.py  roi_selector.py  (+7 more)
core/: __init__.py  errors.py  models.py  profile_manager.py  recorder.py  templates.py  watchdog.py
core/analytics/: metrics.py
core/dsl/: __init__.py  adapter.py  ast.py  autocomplete.py  debugger.py  diagnostics.py  document.py  formatter.py  ir.py  lexer.py  module_loader.py  parser.py  semantic.py  sync_manager.py  tokens.py
core/engine/: __init__.py  builtins.py  context.py  hotkey_listener.py  interpreter.py  interrupt_scanner.py  interrupts.py  memory_manager.py  perf_profile.py  plugin_registry.py  runner.py  scope.py  self_healing.py  services.py
core/events/: __init__.py  trace.py
core/game/: anti_detect.py  macro.py  pixel_detect.py
core/graph/: __init__.py  converter.py  walker.py
core/lsp/: server.py
core/network/: http_client.py  remote.py  websocket.py
core/orchestration/: __init__.py  history.py
core/package/: manager.py  manifest.py  resolver.py
core/plugins/: plugin_system.py
core/recorder/: __init__.py  session.py
docs/: CHANGELOG.md  FEATURES.md  RetroAuto_UserGuide_v5.html  full_user_guide.md  llms.txt  pdf_strategy.md
examples/: README.md
infra/: __init__.py  autosave.py  config.py  crash_handler.py  hotkeys.py  logging.py  profiler.py  version.py
input/: __init__.py  keyboard.py  mouse.py
packaging/: BUILD.md  pyinstaller_spec.py
scripts/: ai_autofix.py  ai_reviewer.py  deep_check.py  dev_watcher.py  full_bug_scan.ps1  generate_changelog.py  generate_pdf_html.py  generate_tests.py  iqds_ast_scanner.py  main.dsl  retro_cli.py  sync_docs.py  test_phase1_perf.py  version_bump.py
tests/: __init__.py  test_a1_fix.py  test_adapter.py  test_autocomplete.py  test_debugger.py  test_formatter.py  test_input.py  test_ir.py  test_lexer.py  test_matcher_roi.py  test_models.py  test_parser.py  test_runner_goto.py  test_script_roundtrip.py  test_security.py  test_semantic.py
vision/: __init__.py  capture.py  matcher.py  ocr.py  pixel_checker.py  waiter.py
(+49 files in other folders)
