[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retroauto"
version = "2.0.6"
description = "Windows automation tool with image recognition - Win95 style"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "RetroAuto Team"}
]
keywords = ["automation", "macro", "image-recognition", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
]

dependencies = [
    "PySide6>=6.6.0",
    "opencv-python>=4.8.0",
    "numpy>=1.26.0",
    "mss>=9.0.0",
    "pywin32>=306",
    "pydantic>=2.5.0",
    "ruamel.yaml>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",
    "watchdog>=4.0.0",
]

[project.scripts]
retroauto = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "core", "vision", "input", "infra"]

# ─────────────────────────────────────────────────────────────
# RUFF - Fast Python linter
# ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module level import not at top (acceptable in tests/scripts)
    "E741",  # ambiguous variable name (l, O, I) - context-dependent
    "B008",  # function call in default argument
    "B007",  # unused loop variable (often intentional)
    "SIM102", # Use single if statement (reduces readability sometimes)
    "SIM108", # Use ternary operator (reduces readability sometimes)
    "SIM117", # combine with statements (readability)
]

[tool.ruff.isort]
known-first-party = ["app", "core", "vision", "input", "infra"]

# ─────────────────────────────────────────────────────────────
# BLACK - Code formatter
# ─────────────────────────────────────────────────────────────
[tool.black]
target-version = ["py311"]
line-length = 100

# ─────────────────────────────────────────────────────────────
# MYPY - Type checker
# ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ─────────────────────────────────────────────────────────────
# PYTEST - Testing
# ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app", "core", "vision", "input", "infra"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
